--- a/src/main/webapp/WEB-INF/templates/template.xhtml
+++ b/src/main/webapp/WEB-INF/templates/template.xhtml
@@ -1,44 +1,52 @@
-<?xml version='1.0' encoding='UTF-8' ?> 
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE html
+        PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
+        "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
+      xmlns:f="http://java.sun.com/jsf/core"
       xmlns:jsf="http://xmlns.jcp.org/jsf"
-      xmlns:p="http://primefaces.org/ui">
+      xmlns:p="http://primefaces.org/ui"
+      xmlns:pm="http://primefaces.org/mobile"
+>
+<f:view renderKitId="PRIMEFACES_MOBILE" />
 
-    <h:head>
-        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1"/>
+<h:head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
 
-        <!--Import Google Icon Font-->
-        <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"></link>
-        <link href='http://fonts.googleapis.com/css?family=Roboto:200,700' rel='stylesheet' type='text/css'></link>
-        
-        <link href="resources/libs/css/materialize.min.css" rel="stylesheet"></link>
-        <link href="resources/libs/css/font-awesome.min.css" rel="stylesheet"></link>
-        <link href="resources/css/application.css" rel="stylesheet"></link>
+    <!--Import Google Icon Font-->
+    <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+    <link href="http://fonts.googleapis.com/css?family=Roboto:200,700"  rel="stylesheet" />
 
-        <title>Reclama Guarapuava</title>
-    </h:head>
+    <!--IMPORT CSS PELO NOME DA LIB-->
+    <h:outputStylesheet library="libs" name="css/materialize.min.css"/>
+    <h:outputStylesheet library="libs" name="css/font-awesome.min.css"/>
+    <h:outputStylesheet library="css" name="application.css"/>
+    <h:outputScript library="primefaces" name="jquery/jquery.js" target="head" />
+    <h:outputScript library="libs" name="js/materialize.min.js" />
+    <h:outputScript library="js" name="application.js" />
+    <title>Reclama Guarapuava</title>
+</h:head>
 
-    <h:body>
-        <nav class="blue lighten-4">
-            <div class="nav-wrapper">
-                <a href="/">
-                    <img id="logo" src="resources/images/logo.png" class="responsive-img"></img>
-                </a>
-              <ul class="right">
-              </ul>
-            </div>
-        </nav>     
-        
-        <main id="content">
+<h:body>
+    <pm:page>
+        <pm:header>
+            <nav class="blue lighten-4">
+                <div class="nav-wrapper">
+                    <a href="#">
+                        <img id="logo" src="/resources/images/logo.png" class="responsive-img" />
+                    </a>
+                    <ul class="right">
+                    </ul>
+                </div>
+            </nav>
+        </pm:header>
+
+        <pm:content id="content">
             <ui:insert name="content"></ui:insert>
-        </main>
-        
-        <h:outputScript library="primefaces" name="jquery/jquery.js" target="head" />
-        <script src="resources/libs/js/materialize.min.js"></script>
-        <script src="resources/js/application.js"></script>
-    </h:body>
-
+        </pm:content>
+    </pm:page>
+</h:body>
 </html>
