--- a/src/main/webapp/resources/css/application.scss
+++ b/src/main/webapp/resources/css/application.scss
@@ -119,12 +119,24 @@ h6 {font-size: 1rem;margin: 0;}
   }
 }
 /**********************************************
+************ Another styles ********************
+***********************************************/
+.errors{
+  text-align: center!important;
+  text-transform: uppercase!important;
+}
+
+/**********************************************
 ************ Responsive styles ****************
 ***********************************************/
 
 @media only screen and (max-width: 800px) {
   #box-text-header {
     font-size: large;
+  }
+  .errors > img {
+    height: 50% !important;
+    width: 50% !important;
   }
 }
 
