--- a/src/main/webapp/WEB-INF/view/ocorrencias-por-bairro.xhtml
+++ b/src/main/webapp/WEB-INF/view/ocorrencias-por-bairro.xhtml
@@ -1,12 +1,15 @@
 <ui:composition template="/WEB-INF/templates/template.xhtml"
                 xmlns="http://www.w3.org/1999/xhtml"
+                xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+                xmlns:h="http://xmlns.jcp.org/jsf/html"
                 xmlns:f="http://java.sun.com/jsf/core"
-                xmlns:h="http://java.sun.com/jsf/html"
-                xmlns:ui="http://java.sun.com/jsf/facelets"
+                xmlns:jsf="http://xmlns.jcp.org/jsf"
                 xmlns:p="http://primefaces.org/ui"
+                xmlns:pm="http://primefaces.org/mobile"
 >
 
 <ui:define name="content">
+    <div class="container">
         <table class="striped">
             <thead>
             <tr>
@@ -34,5 +37,6 @@
             </tr>
             </tbody>
         </table>
+    </div>
     </ui:define>
 </ui:composition>
