--- a/src/main/webapp/view/ocorrencias/cadastrar.xhtml
+++ b/src/main/webapp/view/ocorrencias/cadastrar.xhtml
@@ -26,7 +26,9 @@
 
             <!--  depois que os problemas ja estiverem sido cadastrados devidamente apenas descomentar aqui e trocar occurrenceBean pelo respecitivo bean
                fazer ajustes no itemLabel tambem -->
-            <!--
+
+            <h:panelGrid id = "panel1" columns = "1" border = "0" columnClasses="col1, col2"  cellpadding = "25" cellspacing = "0"  style="width: 500px; padding-left: 400px">
+
             <p:outputLabel for="prb" value="Informe o problema " style="width: 500px" />
             <p:selectOneMenu id="prb" value="#{occurrenceBean.occurrenceList}"  style="width: 500px" >
                 <f:selectItem itemLabel="Select One" itemValue="" />
@@ -34,7 +36,7 @@
             </p:selectOneMenu>
 
         </h:panelGrid>
-            -->
+
             <h:panelGrid id = "panel2" columns = "2" border = "0" columnClasses="col1, col2"  cellpadding = "25" cellspacing = "0"  style="width: 600px; padding-left: 400px">
                 <p:outputLabel for="end" value="Informe o endereco da ocorrência" style="width: 300px" />
 
@@ -58,10 +60,6 @@
                 <p:inputText id="foto" required="true" style="width: 300px"  />
                 <p:commandButton value="Publicar" id="nonAjax" actionListener="#{buttonView.buttonAction}" ajax="false" />
                 -->
-
-
-
-
                 <p:commandButton value="Publicar" id="nonAjax" actionListener="#{occurrenceBean.persist()}" ajax="false" />
             </h:panelGrid>
 
