--- a/src/main/webapp/view/admin/problemas-cadastro.xhtml
+++ b/src/main/webapp/view/admin/problemas-cadastro.xhtml
@@ -13,34 +13,34 @@
 
         <h:form>
             <h2 style="text-align: center">Área administrativa!</h2>
-            <p style="text-align: center">Cadastro de categorias</p>
+            <p style="text-align: center">Cadastro de problemas!</p>
 
             <h:panelGrid id = "panel2" columns = "1" border = "0" columnClasses="col1, col2"  cellpadding = "25" cellspacing = "0"  style="width: 600px; padding-left: 400px">
-                <p:outputLabel for="end" value="Informe o nome da categoria a ser cadastrada:" style="width: 300px" />
-                <p:inputText id="end" value="#{categoryBean.category.name}" required="true" style="width: 300px"  />
-                <p:commandButton value="Gravar" id="nonAjax" actionListener="#{categoryBean.persist()}" ajax="false" />
+                <p:outputLabel for="end" value="Informe o nome do problema a ser cadastrada:" style="width: 300px" />
+                <p:inputText id="end" value="#{problemBean.problem.name}" required="true" style="width: 300px"  />
+                <p:commandButton value="Gravar" id="nonAjax" actionListener="#{problemBean.persist()}" ajax="false" />
             </h:panelGrid>           
 
             <div class="row">
                 <div class="col s12">
-                    <p:dataTable var="category" value="#{categoryBean.findAll()}" paginator="true" rows="5">
+                    <p:dataTable var="problem" value="#{problemBean.findAll()}" paginator="true" rows="5">
                         <p:column headerText="Id">
-                            <h:outputText value="#{category.id}" />
+                            <h:outputText value="#{problem.id}" />
                         </p:column>
 
                         <p:column headerText="Nome">
-                            <h:outputText value="#{category.name}" />
+                            <h:outputText value="#{problem.name}" />
                         </p:column>
 
                         <p:column headerText="">
                             <div class="row center">
                                 <div class="col s12 ">
-                                    <h:commandLink action="#{categoryBean.edit(category)}" class="waves-effect waves-light btn blue darken-3 white-text">
+                                    <h:commandLink action="#{problemBean.edit(category)}" class="waves-effect waves-light btn blue darken-3 white-text">
                                         <i class="material-icons">mode_edit</i>
                                     </h:commandLink>                                    
                                 </div>
                                 <div class="col s12">                                    
-                                    <h:commandLink action="#{categoryBean.delete(category)}" class="waves-effect waves-light btn red darken-3 white-text">
+                                    <h:commandLink action="#{problemBean.delete(category)}" class="waves-effect waves-light btn red darken-3 white-text">
                                         <i class="material-icons">delete_forever</i>
                                     </h:commandLink>
                                 </div>
