--- a/src/main/webapp/view/errors/403.xhtml
+++ b/src/main/webapp/view/errors/403.xhtml
@@ -9,7 +9,18 @@
                 xmlns = "http://www.w3.org/1999/xhtml">
 
     <ui:define name="content">
-        <p:messages>ERRO! ACESSO NEGADO.</p:messages>
+        <div class="container">
+            <div class="col offset-s8 col offset-s4">
+                <div class="errors">
+                    <h3>Sinto Muito</h3>
+                    <h3>Acesso Negado. Entre em contato com o administrador</h3>
+                    <div class="img">
+                        <h:graphicImage library="images" name="erros/negado.png" />
+                    </div>
+                    <a href="/inicio">Voltar a página de Ocorrências</a>
+                </div>
+            </div>
+        </div>
 
     </ui:define>
 
