pagina de comentarios, se tiver cadastro de usuario precisa arrumar

--- a/src/main/webapp/view/login.xhtml
+++ b/src/main/webapp/view/login.xhtml
@@ -25,7 +25,7 @@
             </h:panelGrid>
 
             <p:commandButton id="btEntrar" value="Entrar" ajax="false"
-                             action="#{loginBean.onClickLogar()}"
+                             action="#{loginBean.redireciona()}"
                              icon="ui-icon-check" />
         </h:form>
 
