--- a/src/main/webapp/WEB-INF/templates/template.xhtml
+++ b/src/main/webapp/WEB-INF/templates/template.xhtml
@@ -34,7 +34,7 @@
             <nav class="blue lighten-4">
                 <div class="nav-wrapper">
                     <a href="#">
-                        <img id="logo" src="/resources/images/logo.png" class="responsive-img" />
+                        <img id="logo" src="#{resource['images/logo.png']}" class="responsive-img" />
                     </a>
                     <ul class="right">
                     </ul>
