--- a/src/main/webapp/view/admin/bairros-cadastro.xhtml
+++ b/src/main/webapp/view/admin/bairros-cadastro.xhtml
@@ -10,46 +10,55 @@
 
     <ui:define name="content">
         <p:messages/>
-
-        <h:form>
-            <h2 style="text-align: center">Área administrativa!</h2>
-            <p style="text-align: center">Cadastro de Bairros</p>
-
-            <h:panelGrid id = "panel2" columns = "1" border = "0" columnClasses="col1, col2"  cellpadding = "25" cellspacing = "0"  style="width: 600px; padding-left: 400px">
-                <p:outputLabel for="end" value="Informe o nome da categoria a ser cadastrada:" style="width: 300px" />
-                <p:inputText id="end" value="#{neighborhoodBean.neighborhood.name}" required="true" style="width: 300px"  />
-                <p:commandButton value="Gravar" id="nonAjax" actionListener="#{neighborhoodBean.persist()}" ajax="false" />
-            </h:panelGrid>
-
+        
+        <div class="container">
             <div class="row">
-                <div class="col s6">
-                    <p:dataTable var="neighborhood" value="#{neighborhoodBean.neighborhoodList}" paginator="true" rows="5">
-                        <p:column headerText="Id">
-                            <h:outputText value="#{neighborhood.id}" />
-                        </p:column>
+                <h:form>
+                    <h2 style="text-align: center">Área administrativa!</h2>
+                    <p style="text-align: center">Cadastro de Bairros</p>
 
-                        <p:column headerText="Nome">
-                            <h:outputText value="#{neighborhood.name}" />
-                        </p:column>
+                    <div class="row">
+                        <div class="input-field col s12">
+                            <h:inputText id="neighborhood" value="#{neighborhoodBean.neighborhood.name}"></h:inputText>
+                            <h:outputLabel for="neighborhood">Informe o bairro</h:outputLabel>
+                        </div>
+                    </div>
+                    
+                    <div class="row">
+                        <h:commandButton action="#{neighborhoodBean.persist()}" class="waves-effect waves-light btn" value="Registrar Bairro"></h:commandButton>
+                    </div>
 
-                        <p:column headerText="">
-                            <div class="row center">
-                                <div class="col s12 ">
-                                    <h:commandLink action="#{categoryBean.edit(neighborhood)}" class="waves-effect waves-light btn blue darken-3 white-text">
-                                        <i class="material-icons">mode_edit</i>
-                                    </h:commandLink>
-                                </div>
-                                <div class="col s12">
-                                    <h:commandLink action="#{categoryBean.delete(neighborhood)}" class="waves-effect waves-light btn red darken-3 white-text">
-                                        <i class="material-icons">delete_forever</i>
-                                    </h:commandLink>
-                                </div>
-                            </div>
-                        </p:column>
-                    </p:dataTable>
-                </div>
-            </div>
-        </h:form>
+                    <div class="row">
+                        <div class="col s12">
+                            <p:dataTable var="neighborhood" value="#{neighborhoodBean.neighborhoodList}" paginator="true" rows="5">
+                                <p:column headerText="Id">
+                                    <h:outputText value="#{neighborhood.id}" />
+                                </p:column>
+
+                                <p:column headerText="Nome">
+                                    <h:outputText value="#{neighborhood.name}" />
+                                </p:column>
+
+                                <p:column headerText="">
+                                    <div class="row center">
+                                        <div class="col s12 ">
+                                            <h:commandLink action="#{categoryBean.edit(neighborhood)}" class="waves-effect waves-light btn blue darken-3 white-text">
+                                                <i class="material-icons">mode_edit</i>
+                                            </h:commandLink>
+                                        </div>
+                                        <div class="col s12">
+                                            <h:commandLink action="#{categoryBean.delete(neighborhood)}" class="waves-effect waves-light btn red darken-3 white-text">
+                                                <i class="material-icons">delete_forever</i>
+                                            </h:commandLink>
+                                        </div>
+                                    </div>
+                                </p:column>
+                            </p:dataTable>
+                        </div>
+                    </div>
+                </h:form>
+            </div><!--div.row-->
+        </div><!--div.container-->
     </ui:define>
 
 </ui:composition>
