--- a/src/main/webapp/view/admin/bairros-cadastro.xhtml
+++ b/src/main/webapp/view/admin/bairros-cadastro.xhtml
@@ -1,5 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-        "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+
 <ui:composition template="/WEB-INF/templates/template.xhtml"
                 xmlns="http://www.w3.org/1999/xhtml"
                 xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
@@ -30,7 +29,7 @@
 
                     <div class="row">
                         <div class="col s12">
-                            <p:dataTable var="neighborhood" value="#{neighborhoodBean.neighborhoodList}" paginator="true" rows="5">
+                            <p:dataTable var="neighborhood" value="#{neighborhoodBean.findAll()}" paginator="true" rows="5">
                                 <p:column headerText="Id">
                                     <h:outputText value="#{neighborhood.id}" />
                                 </p:column>
