listagem das categorias na tela inicial, falta listar o total de ocorrencias em cada categoria

--- a/src/main/webapp/resources/css/application.css
+++ b/src/main/webapp/resources/css/application.css
@@ -139,6 +139,10 @@ h6 {
   text-transform: uppercase !important;
 }
 
+.padding{
+  padding: 2% 10%!important;
+}
+
 /**********************************************
 ************ Responsive styles ****************
 ***********************************************/
