--- a/src/main/webapp/view/ocorrencias/inicio.xhtml
+++ b/src/main/webapp/view/ocorrencias/inicio.xhtml
@@ -6,31 +6,25 @@
                 xmlns:jsf="http://xmlns.jcp.org/jsf"
                 xmlns:p="http://primefaces.org/ui"
                 xmlns:pm="http://primefaces.org/mobile"
-                >
+>
 
     <ui:define name="content">
         <header id="home-page-header">
             <img id="image-header" src="resources/images/gp.jpg" />
-
             <div id="box-action">
                 <a href="cadastrar.xhtml" class="waves-effect waves-light btn blue darken-3">
                     <i class="fa fa-facebook-square" aria-hidden="true" />
                     PUBLICAR UMA OCORRENCIA
                 </a>
             </div>
-
             <div id="box-text-header" class="center-align">
-
-
             </div>
         </header>
-
         <article id="index-content" class="container">
             <header class="center-align">
                 <h1>Publique, veja, avalie, compartilhe e opine</h1>
                 <span>para juntos fazermos uma cidade melhor</span>
             </header>
-
             <div class="row">
                 <div class="event-card grey lighten-1 col s12">
                     <div class="container card-body">
@@ -43,7 +37,7 @@
                             </div>
                             <div class="col s2 card-action">
                                 <div class="box center-align">
-                                    <span>59</span>
+                                    <span>#{occurrenceBean.occurrenceService.findAll().size()}</span>
                                 </div>
                             </div>
                         </div>
@@ -52,67 +46,42 @@
             </div>
 
             <div class="row">
-                <div class="event-card light-green lighten-2 col s6">
-                    <div class="container card-body">
-                        <div class="row">
-                            <div class="col s2 card-icon">
-                                <i class="fa fa-envelope-open" aria-hidden="true" />
-                            </div>
-                            <div class="col s10 card-text center-align">
-                                <p>Buracos</p>
-                                <p>12 OCORRÊNCIAA</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="event-card orange lighten-4 col s6">
-                    <div class="container card-body">
-                        <div class="row">
-                            <div class="col s2 card-icon">
-                                <i class="fa fa-trash" aria-hidden="true" />
-                            </div>
-                            <div class="col s8 card-text center-align">
-                                <p>LIXO</p>
-                            </div>
-                            <div class="col s2 card-action">
-                                <div class="box center-align">
-                                    <span>14</span>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                <div class="input-field col offset-s3 s6">
+                    <h:form>
+                    <h:selectOneMenu id="neighborhoods" value="#{occurrenceBean.neigIdSelected}">
+                        <f:selectItem itemValue="" itemLabel="Selecione um Bairro"/>
+                        <f:selectItems var="neighborhood" value="#{neighborhoodBean.findAll()}" itemValue="#{neighborhood.id}" itemLabel="#{neighborhood.name}"/>
+                        <f:ajax event="change"
+                                listener="#{occurrenceBean.byNeighborhood()}"
+                                execute="neighborhoods"
+                                render=":index-content:neighborhood"
+                        />
+                    </h:selectOneMenu>
+                    <h:outputLabel for="neighborhood">Bairro</h:outputLabel>
+            </h:form>
                 </div>
             </div>
-
             <div class="row">
-                <div class="event-card green darken-1 col s6">
-                    <div class="container card-body">
-                        <div class="row">
-                            <div class="col s2 card-icon">
-                                <i class="fa fa-th-large" aria-hidden="true" />
+                <ui:repeat id="neighborhood" value="#{occurrenceBean.occurrenceList}" var="occurrence">
+                    <div class="col s12 l4">
+                        <div class="card">
+                            <div class="card-image waves-effect waves-block waves-light">
+                                <img class="activator" src="http://lorempixel.com/400/400/city/"/>
                             </div>
-                            <div class="col s10 card-text center-align">
-                                <p>MEIO AMBIENTE</p>
-                                <p>12 OCORRÊNCIAA</p>
+                            <div class="card-content">
+                                <span class="card-title activator grey-text text-darken-4">#{occurrence.problem.name}<i class="material-icons right">more_vert</i></span>
+                                <p><a href="/ocorrencias/#{occurrence.id}/detalhes">Detalhes</a></p>
+                            </div>
+                            <div class="card-reveal">
+                                <span class="card-title grey-text text-darken-4">#{occurrence.problem.name}<i class="material-icons right">close</i></span>
+                                <p>Endereço: #{occurrence.address} - #{occurrence.neighborhood.name}</p>
+                                <p>Reclamação: #{occurrence.category.name} - #{occurrence.problem.name}</p>
+                                <p>Descrição: #{occurrence.description}</p>
+                                <p><a href="/ocorrencias/#{occurrence.id}/detalhes">Detalhes</a></p>
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="event-card amber accent-3 col s6">
-                    <a href="/ocorrencias/bairros">
-                        <div class="container card-body">
-                            <div class="row">
-                                <div class="col s2 card-icon">
-                                    <i class="fa fa-th-large" aria-hidden="true" />
-                                </div>
-                                <div class="col s10 card-text center-align">
-                                    <p>SINALIZAÇÃO</p>
-                                    <p>12 OCORRÊNCIA</p>
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
+                </ui:repeat>
             </div>
         </article>
     </ui:define>
