create occorrence list, details and delete

--- a/src/main/webapp/resources/css/application.css
+++ b/src/main/webapp/resources/css/application.css
@@ -144,6 +144,16 @@ h6 {
 }
 
 /**********************************************
+************ occurrence styles ****************
+***********************************************/
+
+/*--------------- Show occurrence -----------*/
+
+#show-occurrence div.panel-occurrence {
+    padding: 30px;
+}
+
+/**********************************************
 ************ Responsive styles ****************
 ***********************************************/
 @media only screen and (max-width: 800px) {
