--- a/src/main/webapp/view/admin/ocorrencias.xhtml
+++ b/src/main/webapp/view/admin/ocorrencias.xhtml
@@ -6,45 +6,56 @@
                 xmlns:h="http://xmlns.jcp.org/jsf/html"
                 xmlns:jsf="http://xmlns.jcp.org/jsf"
                 xmlns:p="http://primefaces.org/ui"
-                xmlns:f="http://xmlns.jcp.org/jsf/core">
+                xmlns:f="http://xmlns.jcp.org/jsf/core"
+                xmlns:pretty="http://ocpsoft.com/prettyfaces">
 
     <ui:define name="content">
         <p:messages/>
         
-        <artigle>
-            <header class="center-align">
-                <h3>Listagem de Ocorrências</h3>
-            </header>
-            
-            <div class="divider"></div>
-        
-            <h:dataTable value="#{occurrenceBean.findAll()}" var="occurrence">
+        <div class="container">
+            <artigle>
+                <header class="center-align">
+                    <h3>Listagem de Ocorrências</h3>
+                </header>
+
+                <div class="divider"></div>
+
+                <h:dataTable value="#{occurrenceBean.findAll()}" var="occurrence">
                     <h:column>
-                    	<!-- column header -->
-                    	<f:facet name="header">Nome do Problema</f:facet>
-                    	<!-- row record -->
-                    	#{occurrence.problem.name}
+                        <!-- column header -->
+                        <f:facet name="header">Nome do Problema</f:facet>
+                        <!-- row record -->
+                        #{occurrence.problem.name}
                     </h:column>
 
                     <h:column>
-                    	<f:facet name="header">Bairro</f:facet>
-                    	#{occurrence.neighborhood.name}
+                        <f:facet name="header">Bairro</f:facet>
+                        #{occurrence.neighborhood.name}
                     </h:column>
 
                     <h:column>
-    			<f:facet name="header">Categoria</f:facet>
-                    	#{occurrence.category.name}
+                        <f:facet name="header">Categoria</f:facet>
+                        #{occurrence.category.name}
                     </h:column>
 
                     <h:column>
-    			<f:facet name="header"></f:facet>
-                        <h:commandLink>Detalhes</h:commandLink>
+                        <f:facet name="header"></f:facet>
+                        <pretty:link mappingId="occurrence" class="btn">
+                            <f:param value="#{occurrence.id}"/>
+                            <f:view>Detalhes</f:view>
+                        </pretty:link>
+                    </h:column>
                         
+                    <h:column>
+                        <f:facet name="header"></f:facet>
+                        <h:form>
+                            <h:commandLink action="#{occurrenceBean.delete(occurrence)}" value="remover" class="btn red"/>
+                        </h:form>
                     </h:column>
 
-    		</h:dataTable>
-        </artigle>
-        
+                </h:dataTable>
+            </artigle>
+        </div>
     </ui:define>
 
 </ui:composition>
