--- a/src/main/webapp/resources/css/application.css
+++ b/src/main/webapp/resources/css/application.css
@@ -111,13 +111,15 @@ h6 {
 .event-card {
   height: 80px;
   border-radius: 10px;
+  margin-top: 20px;
+
 }
 .event-card .card-body {
-  margin-top: 20px;
-  margin-bottom: 20px;
+    padding-top: 10px;
 }
+
 .event-card .card-body p {
-  margin: 0;
+  margin-top: 5px;
 }
 .event-card .card-body .card-icon {
   font-size: 40px;
@@ -129,6 +131,7 @@ h6 {
   background-color: white;
   border-radius: 10px;
   float: right;
+  margin-top: 5px;
 }
 
 /**********************************************
